--- a/Pastecard/Base.lproj/LaunchScreen.storyboard
+++ b/Pastecard/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,45 +13,27 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YZ-h7-nO9">
-                                <rect key="frame" x="16" y="32" width="288" height="12"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YZ-h7-nO9" userLabel="Blue Border">
+                                <rect key="frame" x="16" y="74" width="343" height="24"/>
                                 <color key="backgroundColor" name="trademarkBlue"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="12" id="DdU-Bh-DJw"/>
-                                    <constraint firstAttribute="width" constant="400" id="TjG-yb-y2Z"/>
+                                    <constraint firstAttribute="height" constant="24" id="fW5-ut-UkQ"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="TjG-yb-y2Z"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=regular">
-                                    <mask key="constraints">
-                                        <include reference="TjG-yb-y2Z"/>
-                                    </mask>
-                                </variation>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="fafaBackground"/>
                         <constraints>
-                            <constraint firstItem="8YZ-h7-nO9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="32" id="2Gf-W0-QBn"/>
-                            <constraint firstItem="8YZ-h7-nO9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4ha-wG-D71"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8YZ-h7-nO9" secondAttribute="trailing" constant="16" id="BxX-bI-f5s"/>
+                            <constraint firstItem="8YZ-h7-nO9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="ill-5V-OhQ"/>
                             <constraint firstItem="8YZ-h7-nO9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="mnq-h0-tH9"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="4ha-wG-D71"/>
-                            </mask>
-                        </variation>
                         <variation key="widthClass=regular">
                             <mask key="constraints">
                                 <exclude reference="BxX-bI-f5s"/>
-                                <include reference="4ha-wG-D71"/>
                                 <exclude reference="mnq-h0-tH9"/>
                             </mask>
                         </variation>
